--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "econ-dash",
-  "version": "1.0.0",
-  "description": "Provides endpoints for an \"economy\" dashboard in Dash",
+  "version": "2.0.0",
+  "description": "Provides formatted output for an \"economy\" dashboard in Dash",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +9,12 @@
   "author": "Jerry Orr <orr94@yahoo.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.9.7",
+    "JSONStream": "^0.10.0",
+    "event-stream": "^3.2.1",
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
-    "request": "^2.45.0"
+    "request": "^2.51.0",
+    "stream-reduce": "^1.0.3",
+    "yargs": "^1.3.3"
   }
 }
